Bug 52015 - FILEOPEN particular(?) .ppt with connector connected to table will CRASH
Summary: FILEOPEN particular(?) .ppt with connector connected to table will CRASH
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium major
Assignee: David Tardon
URL:
Whiteboard: BSA target:3.7.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-12 14:56 UTC by Rainer Bielefeld Retired
Modified: 2012-07-23 08:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-07-12 14:56:34 UTC
Steps how to reproduce with Server Installation of  "LibreOffice 3.6.0.0.beta3 
German UI/Locale [Build-ID: 3e2b862] on German WIN7 Home Premium (64bit):

Follow instructions in original AOOo bug with sample from original AOOo bug.

OS = ALL and NEW due to AOOo Bug.

Please see:
<http://nabble.documentfoundation.org/Including-a-patch-from-AOO-td3992463.html>
concerning use of AOOo patches
Comment 1 Rainer Bielefeld Retired 2012-07-12 15:01:36 UTC
Already in LibO 3.3.3 and OOo 3.2, so inherited from OOo

@Radek:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
Comment 3 David Tardon 2012-07-23 07:59:35 UTC
Apparently the code assumes that SdrObjListIter for a group object _includes_ the group object itself. I wonder if there are more places that make the same assumption...
Comment 4 Not Assigned 2012-07-23 08:46:40 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d067102af8cbe1f95fb2f0458df891bd38210723

fdo#52015 do not crash importing connector to table from .ppt