fdo#52015 do not crash importing connector to table from .ppt

Change-Id: Ib7d7860cd422b28b6987f94da0a9c664ff7dfde1